--- a/MARCO_ANTONIO_RUMICHE_PINGO_Seminario_Algoritmos.ipynb
+++ b/MARCO_ANTONIO_RUMICHE_PINGO_Seminario_Algoritmos.ipynb
@@ -13,14 +13,11 @@
    "source": [
     "# Algoritmos de optimización - Seminario<br>\n",
     "\n",
-    "Nombre y Apellidos:   <br>\n",
-    "Url: https://github.com/.../03MAIR---Algoritmos-de-Optimizacion---2019/tree/master/SEMINARIO<br>\n",
-    "\n",
     "Nombre: Marco Antonio Rumiche Pingo<br>\n",
     "<br>\n",
-    "URL: https://colab.research.google.com/drive/1RrAIquQ-DHC60WMjekvhshcgLru2dDD3#scrollTo=qP-Y3Gkfc4vn<br>\n",
+    "URL: https://colab.research.google.com/drive/1ff9mxg9s5LTZMW8Kvm4VCCz61VGG3Lbf<br>\n",
     "<br>\n",
-    "https://github.com/rumichem/AlgoritmosdeOptimizacion/blob/main/MARCO_ANTONIO_RUMICHE_PINGO_AG3.ipynb<br>\n",
+    "https://github.com/rumichem/AlgoritmosdeOptimizacion-Seminario/tree/main/MARCO_ANTONIO_RUMICHE_PINGO_AG3.ipynb<br>\n",
     "<br>\n",
     "Problema:<br>\n",
     "> 1. Sesiones de doblaje <br>\n",
